// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`android 1. does not render an image if display is not received 1`] = `<View />`;

exports[`android 2. does not render an image if ratio is not received 1`] = `<View />`;

exports[`android 3. image with no caption 1`] = `
<View>
  <View>
    <ModalImage
      aspectRatio={1.7777777777777777}
      uri="https://imageserver/someImage"
    />
  </View>
</View>
`;

exports[`android 4. image with caption 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          Some caption
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`android 5. image with credit 1`] = `
<View>
  <View>
    <View>
      <View>
        <Text>
          SOME CREDIT
        </Text>
      </View>
    </View>
  </View>
</View>
`;
